# sdl-gameloop

./: .clang-format  .clangd  .gitignore  LICENSE  Makefile  README.md  main.c  meson.build  util.c  window.c
archive/: widget.cpp  widget.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
scripts/: find_sources.sh
shaders/: fractal.frag  triangle.frag  triangle.vert
src/: clipboardtest.cpp  clipboardtest.hpp  debuggui.cpp  debuggui.hpp  graphics.cpp  graphics.hpp  gui.cpp  gui.hpp  main.cpp  state.cpp  state.hpp  widget.cpp  widget.hpp  window.cpp  window.hpp  worker.cpp  worker.hpp
